fix: responsive query on mobile, tablet, and desktop devices

--- a/app/components/mainLanding/priceList/styles.module.scss
+++ b/app/components/mainLanding/priceList/styles.module.scss
@@ -3,9 +3,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
-.priceList_link {
+.rollSvgs {
+    position: absolute;
+    top: 50%;
+    left: -16em;
+    z-index: -239;
+    animation: rotateAnimation 10s linear infinite;
+}
+
+
+
+@keyframes rotateAnimation {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.springSvgs_prcs {
+    position: absolute;
+    top: 50%;
+    right: -12em;
+    z-index: -239;
+}
+
+.priceList_link_button {
 
     .priceList_link_item {
         white-space: nowrap;
@@ -14,6 +42,14 @@
 
 .priceList_item {
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
+.priceList_title_svg {
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    // padding: 30px 0;
 }
 
 @media (max-width: 767px) {
@@ -77,7 +113,7 @@
             gap: 9px;
         }
 
-        .priceList_link {
+        .priceList_link_button {
             display: flex;
             margin: auto;
 
@@ -101,7 +137,7 @@
                 font-size: 14px;
             }
 
-            .priceList_link {
+            .priceList_link_button {
                 .priceList_link_item {
                     font-size: 14px;
                 }
@@ -172,7 +208,7 @@
             gap: 10px;
         }
 
-        .priceList_link {
+        .priceList_link_button {
             display: flex;
             margin: auto;
 
@@ -197,7 +233,7 @@
                 font-size: 14px;
             }
 
-            .priceList_link {
+            .priceList_link_button {
                 .priceList_link_item {
                     font-size: 14px;
                 }
@@ -269,7 +305,7 @@
             gap: 10px;
         }
 
-        .priceList_link {
+        .priceList_link_button {
             display: flex;
             margin: auto;
 
@@ -303,7 +339,7 @@
         background-color: #CAFD00;
         color: #141414;
 
-        .priceList_link {
+        .priceList_link_button {
             display: flex;
             margin: auto;
 
@@ -326,7 +362,7 @@
         background-color: #1F1F1F;
         color: #ffffff;
 
-        .priceList_link {
+        .priceList_link_button {
             display: flex;
             margin: auto;
 
